Chapter07/default-deny-ingress.yaml
# default-deny-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: web2
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: []
